[tool.poetry]
name = "loom"
version = "0.1.0"
description = ""
authors = ["fergus <fergusfettes@gmail.com>"]
readme = "README.md"
packages = [{include = "loom"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
tokenizers = "^0.13.2"
transformers = "^4.26.1"
amqp = "5.0.2"
billiard = "3.6.3.0"
celery = "5.0.5"
certifi = "2020.12.5"
chardet = "4.0.0"
click = "7.1.2"
click-didyoumean = "0.0.3"
click-plugins = "1.1.1"
click-repl = "0.1.6"
dill = "0.3.3"
html2text = "2020.1.16"
idna = "2.10"
jsonlines = "2.0.0"
kombu = "5.0.2"
multiprocess = "0.70.11.1"
openai = "^0.26.5"
pandas = "1.3.3"
pathos = "0.2.7"
pillow = "8.0.1"
pox = "0.2.9"
ppft = "1.6.6.3"
prompt-toolkit = "3.0.8"
pyperclip = "1.8.1"
python-dateutil = "2.8.1"
pytz = "2020.5"
redis = "3.5.3"
requests = "2.25.1"
six = "1.15.0"
tk = "0.1.0"
ttkthemes = "2.4.0"
urllib3 = "1.26.2"
vine = "5.0.0"
wcwidth = "0.2.5"
deepmerge = "0.3.0"
diff-match-patch = "20200713"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
