[tool.poetry]
name = "loom"
version = "0.1.0"
description = ""
authors = ["fergus <fergusfettes@gmail.com>"]
readme = "README.md"
packages = [{include = "loom"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
openai = "^0.26.5"
python-dotenv = "^1.0.0"
tokenizers = "^0.13.2"
transformers = "^4.26.1"
tk = "^0.1.0"
pillow = "^9.4.0"
ttkthemes = "^3.2.2"
celery = "^5.2.7"
pandas = "^1.5.3"
numpy = "^1.24.2"
html2text = "^2020.1.16"
deepmerge = "^1.1.0"
diff-match-patch = "^20200713"

[project]
name = "loom"
version = "0.1.0"

[tool.setuptools.package-data]
loom = ["loom"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
